fixed whitespace

--- a/projects.css
+++ b/projects.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  margin: 0;
+  margin-bottom: 0;
   background-color: #222222;
 }
 
@@ -75,10 +75,17 @@ margin-bottom: 0;
 
 html {
   margin: 0;
+  padding: 0;
+  min-height: 100%;
+  height: 100%;
+  background-color: #222222
 }
 
 body {
   margin: 0;
+  min-height: 100%;
+  width: 100%;
+  padding: 0;
 }
 
 p {
